add_library(Evolutionary
    physics/ElasticModelCollision.cpp
    physics/ImplicitODESolver.cpp
    # physics/FluidFriction.cpp
    # physics/FluidDynamics.cpp
    physics/InvertibleNeoHookeanModel.cpp
    physics/SurfaceForce.cpp
    physics/InvertibleNeoHookeanStressDensity.cpp
    physics/CollisionObjects.cpp
)
